# se-vault-docs

brainstorm/: software-engineering-for-data-engineers.md
funda-re/: 02-python-vs-c.md  (+3 more)
se-for-data-non-se/lessons/03-OPP/project-folder/backend/: Dockerfile  pyproject.toml
se-for-data-non-se/lessons/03-OPP/project-folder/backend/app/: state.py
se-for-data-non-se/lessons/03-OPP/project-folder/backend/app/models/: __init__.py  common.py  page1_classes.py
se-for-data-non-se/lessons/03-OPP/project-folder/backend/app/routers/: page1_classes.py  page5_factory.py
se-for-data-non-se/lessons/03-OPP/project-folder/backend/app/sse/: stream.py
se-for-data-non-se/lessons/04-APIS/cozinhas-chat/api/: Dockerfile  pyproject.toml
se-for-data-non-se/lessons/04-APIS/cozinhas-chat/api/src/: database.py  main.py  models.py
se-for-data-non-se/lessons/04-APIS/cozinhas-chat/api/src/routes/: dishes.py  sql.py
se-for-data-non-se/lessons/04-APIS/cozinhas-chat/api/src/services/: cache.py
se-for-data-non-se/lessons/05-anatomia-producao/project/codex_plan_shot/palantir_project/api/: Dockerfile  pyproject.toml
se-for-data-non-se/lessons/05-anatomia-producao/project/codex_plan_shot/palantir_project/api/src/: __init__.py  config.py  database.py  main.py  models.py  tasks.py
se-for-data-non-se/lessons/05-anatomia-producao/project/codex_plan_shot/palantir_project/api/src/routes/: architecture.py  gate.py  library.py  missions.py  telemetry.py
se-for-data-non-se/lessons/05-anatomia-producao/project/codex_plan_shot/palantir_project/api/src/services/: __init__.py  telemetry.py
(+576 files in other folders)
