[project]
name = "palantir-api"
version = "0.1.0"
description = "Palantir integrated production anatomy API scaffold"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.34.0",
  "gunicorn>=23.0.0",
  "pydantic-settings>=2.6.0",
  "celery[redis]>=5.4.0",
  "redis>=5.0.0",
  "psycopg[binary]>=3.2.0",
]

[tool.uv]
package = false
